--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
 buildscript {
     ext {
         compose_version = '1.0.0-alpha07'
+        koin_version = '2.2.1'
+        kotlin_version = '1.4.10'
     }
-    ext.kotlin_version = "1.4.10"
     repositories {
         google()
         jcenter()
